# DistributedFileSystem

./: .~lock.CS4532-Distributed-File-System-Report.docx#  CS4532-Distributed-File-System-Report.docx  README.md  build.sh  clean.sh  my.term.pid  run.sh  setup.sh  start.sh
directoryServer/: README.md  directoryServer.cabal  stack.yaml
directoryServer/.stack-work/install/x86_64-linux/lts-7.14/8.0.1/flag-cache/: MonadRandom-0.4.2.3-8TfCm6PGvGYB7omozORhov  aeson-0.11.2.1-5ZQWuTFmffALcfpzDCXoOz  aeson-pretty-0.8.2-FONEppYcAcNL67yNmD5AQ1  ansi-terminal-0.6.2.3-448ipfN5j28Ha0AgPiJmdI  ansi-wl-pprint-0.6.7.3-LVnipygDrAR1FEMFhjxcQX  appar-0.1.4-1in4Ewd8JBkAYDZSWXLSe0  asn1-encoding-0.9.4-2Zu5ldLYD571Aw26w0CWF6  asn1-parse-0.9.4-Ai83ACtrOir9VlSOQtWm2F  asn1-types-0.3.2-4Rz223aP8OG6vnHYiLX5Ab  async-2.1.1-xFiBzw9xoB8HPZAuxUY2o  attoparsec-0.13.1.0-5Olk1S76r1CDYzFS6V3sZR  auto-update-0.1.4-GAesfFmqoZzBz6e09kRyzb  base-compat-0.9.1-tmPpmtbHbvIDjFWbkjGrR  base16-bytestring-0.1.1.6-5dPoF8dzhwzBaEB2MvnmIS  base64-bytestring-1.0.0.1-In9M41tLtcS9QYt3QpGpNY  blaze-builder-0.4.0.2-KWDLbdBYSBoALiMW0LHIz1  blaze-html-0.8.1.3-8MBPJsFNBtBBD2gWERenva  blaze-markup-0.7.1.1-IE161DWDHNXF9O8bBguli5  bson-0.3.2.3-3QA3aP5EtCyCltXUzEKOsQ  bson-generic-0.0.8-DtORpoUHwQhDReLJ5Keop0  byteable-0.1.1-15aIBCArSOBEnGxArzrDTM  byteorder-1.0.4-BbL4c17EpZrL9PcZm0xys9  bytestring-builder-0.10.8.1.0-4GkSrJiY0n01lBdCh7onK  bytestring-conversion-0.3.1-EAlKk6pzstQ97QOJQPK8Q6  case-insensitive-1.2.0.7-FlqweN7AuKj9EdU2arVEt4  cereal-0.5.4.0-2FJYHGgtE5C3SxaZjt25xS  cipher-aes-0.2.11-6IDqXzfBW6B3WK2bKJbiBh  cmdargs-0.10.14-8WOlFWoK1XlCebTZE2edgd  commonAPIs-0.1.0.0-2KMD0LAySofF5UCzxD1HfM  connection-0.2.6-HdqI1haOFiwKHVrIKjItoA  cookie-0.4.2.1-2a2c54yIyBn79Ul3iLWclJ  cprng-aes-0.6.1-COLYQrn2KP0KrG5tq2u9OS  crypto-cipher-types-0.0.9-Iwzx9devSK6HQoOjujg46u  crypto-random-0.0.9-GQAZIw8UH93GFERaAFFYYo  cryptohash-0.11.9-9KNu0EEbreBFrmNJAeHgYz  (+90 more)
directoryServer/app/: Main.hs
directoryServer/src/: APIs.hs  Directory.hs
(+2873 files in other folders)
