name:                directoryServer
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/vanhoutk/DistributedFileSystem/directoryServer#readme
license:             BSD3
license-file:        LICENSE
author:              Kris Vanhoutte
maintainer:          vanhoutk@tcd.ie
copyright:           2017 Kris Vanhoutte
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Directory
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , bson-generic
                     , commonAPIs
                     , directory
                     , http-client
                     , mongoDB
                     , random
                     , resourcet
                     , servant
                     , servant-client
                     , servant-server
                     , text
                     , time
                     , transformers
                     , wai
                     , warp
  default-language:    Haskell2010

executable directoryServer-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , directoryServer
  default-language:    Haskell2010

test-suite directoryServer-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , directoryServer
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/vanhoutk/DistributedFileSystem/directoryServer
